--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <title>Music Player</title>
   </head>
   <body>
-    <h1>Music Player</h1>
     <div class="music-container">
       <div class="music-info">
-        <h4 id="title">Ukulele</h4>
+        <h4 id="title">ini lagu</h4>
         <div class="progress-container">
           <div class="progress"></div>
         </div>
